--- a/iti-project/Pages/About.cshtml
+++ b/iti-project/Pages/About.cshtml
@@ -4,6 +4,39 @@
     ViewData["Title"] = "About";
 }
 <h2>@ViewData["Title"]</h2>
-<h3>@Model.Message</h3>
+
+<div class="container">
+    <div class="row">
+        <div class="col-lg-4 about-div">
+        Navn: @Model.Anton.Name <br />
+        E-mail: @Model.Anton.Email<br />
+        Studieretning: <br />
+        Nuværende semester: <br />
+        Alder: <br />
+        Fødselsdage: <br />
+        Facebook password: <br />
+        </div> 
+        
+        <div class="col-lg-4 about-div">
+        Navn: <br />
+        E-mail: <br />
+        Studieretning: <br />
+        Nuværende semester: <br />
+        Alder: <br />
+        Fødselsdage: <br />
+        Facebook password: <br />    
+        </div>
+
+        <div class="col-lg-4 about-div">
+        Navn: <br />
+        E-mail: <br />
+        Studieretning: <br />
+        Nuværende semester: <br />
+        Alder: <br />
+        Fødselsdage: <br />
+        Facebook password: <br />
+        </div>
+    </div>
+</div>
 
 <p>Use this area to provide additional information.</p>
