--- a/iti-project/wwwroot/css/site.css
+++ b/iti-project/wwwroot/css/site.css
@@ -4,7 +4,9 @@ body {
 }
 
 .about-div {
-    border: 1px solid black;
+    background-color: #EEE;
+    border: 1px solid #CCC;
+    padding: 5px 0px 5px 0px;
 }
 
 /* Wrapping element */
