--- a/iti-project/Pages/_Layout.cshtml
+++ b/iti-project/Pages/_Layout.cshtml
@@ -34,6 +34,7 @@
                     <li><a asp-page="/Index">Home</a></li>
                     <li><a asp-page="/About">About</a></li>
                     <li><a asp-page="/Gallery">Gallery</a></li>
+                    <li><a asp-page="/Admin">Admin Page</a></li>
                 </ul>
             </div>
         </div>
