--- a/iti-project/wwwroot/css/site.css
+++ b/iti-project/wwwroot/css/site.css
@@ -9,6 +9,10 @@ body {
     padding: 5px 0px 5px 0px;
 }
 
+.admin-div {
+    background-color: #EEE;
+}
+
 /* Wrapping element */
 /* Set some basic padding to keep content from hitting the edges */
 .body-content {
