fixed typo in about page

--- a/iti-project/Pages/About.cshtml
+++ b/iti-project/Pages/About.cshtml
@@ -14,7 +14,7 @@
         Studieretning: @Model.Anton.Study <br />
         Nuværende semester: @Model.Anton.Semester <br />
         Alder: @Model.Anton.Age <br />
-        Fødselsdage: @Model.Anton.Birthday <br />
+        Fødselsdag: @Model.Anton.Birthday <br />
         Facebook password: @Model.Anton.FacebookPassword <br />
         </div> 
         
@@ -24,7 +24,7 @@
         Studieretning: @Model.Niels.Study <br />
         Nuværende semester: @Model.Niels.Semester <br />
         Alder: @Model.Niels.Age <br />
-        Fødselsdage: @Model.Niels.Birthday <br />
+        Fødselsdag: @Model.Niels.Birthday <br />
         Facebook password: @Model.Niels.FacebookPassword <br />
         </div>
 
@@ -34,7 +34,7 @@
         Studieretning: @Model.Niclas.Study <br />
         Nuværende semester: @Model.Niclas.Semester <br />
         Alder: @Model.Niclas.Age <br />
-        Fødselsdage: @Model.Niclas.Birthday <br />
+        Fødselsdag: @Model.Niclas.Birthday <br />
         Facebook password: @Model.Niclas.FacebookPassword <br />
         </div>
     </div>
