--- a/iti-project/Pages/Index.cshtml
+++ b/iti-project/Pages/Index.cshtml
@@ -4,6 +4,11 @@
     ViewData["Title"] = "Home page";
 }
 
+
+<div class="home-title">
+    <h1>Welcome to the website about Antonio, Niclas and Niels... </h1>
+    <h3>.... This homepage has absolutely no reason to exist....</h3>
+</div>
 <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
     <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -14,34 +19,16 @@
         <div class="item active">
             <img src="~/images/ant.jpg" alt="ASP.NET" class="img-responsive"/>
             <div class="carousel-caption" role="option">
-                <p>
-                    Learn how to be a fagget anywhere.
-                    <a class="btn btn-default" href="http://molby.net/">
-                        Learn More
-                    </a>
-                </p>
             </div>
         </div>
         <div class="item">
             <img src="~/images/nic.jpg" alt="Visual Studio" class="img-responsive"/>
             <div class="carousel-caption" role="option">
-                <p>
-                    There are powerful new features in Visual Studio for building modern web apps.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525030&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
             </div>
         </div>
         <div class="item">
             <img src="~/images/nils.jpg" alt="Package Management" class="img-responsive"/>
             <div class="carousel-caption" role="option">
-                <p>
-                    Bring in libraries from NuGet and npm, and automate tasks using Grunt or Gulp.
-                    <a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkID=525029&clcid=0x409">
-                        Learn More
-                    </a>
-                </p>
             </div>
         </div>
     </div>
@@ -55,38 +42,27 @@
     </a>
 </div>
 
-<div class="row">
-    <div class="col-md-3">
-        <h2>Why this website?</h2>
-        <ul>
-            <li>'caus shits'n'giggles</li>
-            <li>Try to click on this link lmao <a href="http://heltner.net/">don't click this</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>How to</h2>
-        <ul>
-            <li>Be a fagget like antjon <a href="https://lascariblog.wordpress.com/">Click on this fagget link</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Overview</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=518008">Conceptual overview of what is ASP.NET Core</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699320">Fundamentals of ASP.NET Core such as Startup and middleware.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398602">Working with Data</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398603">Security</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699321">Client side development</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699322">Develop on different platforms</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699323">Read more on the documentation site</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Run &amp; Deploy</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517851">Run your app</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517853">Run tools such as EF migrations and more</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398609">Publish to Microsoft Azure App Service</a></li>
-        </ul>
-    </div>
+<div class="home-bottom-div">
+    <h4>So now you probably think: "Why this website?"</h4>
+    <p>Great question!</p><br />
+    <p>This was the exact question Daniel Radcliffe was asked, when we presented him the website.</p><br />
+    <p>Daniel reacted immediately with: </p>
+    <div class="quotation-block">
+        <q>This page is ******* ****, was it seriously necessary to kidnap my parents, and then force me to see this?! </q>
+    </div><br /><br />
+    <p>As it can be seen on our picture we took of him, his reaction was overwhelmingly positive!</p>
+    <p>Of course we never think this webpage will be perfect, but it is very close.</p>
+    <p>Many many many hours have been put into this webpage, this includes spelll checking and inserting<br />interesting pictures, that shows our passion for this website.</p>
+    <p>We asked Daniel, since we had him as visitor, about how we could make the page even better. <br />Then he putted some weird glasses on, took out a wand he had in his pocket and shouted:</p>
+    <div class="quotation-block">
+        <q>WEBPAGUS DELETUS!</q>
+    </div><br /><br />
+    <p>... What an exciting visitor!</p><br />
+    <p>Please feel free to explore this fantastic webpage, and sign up for our adventurous newsletter!<br />or go to the administration page, and change some information, because that is a very<br />important feature to have on a webpage..</p><br />
+    <img src="~/images/meme.jpg" alt="ASP.NET" class="img-responsive"/>
 </div>
+<div class="home-picture-div">
+    <img src="~/images/daniel.jpg" alt="ASP.NET" class="img-responsive" height="500px" width="250px"/>
+    <p class="picture-description">Daniel Radcliffe very happy after seeing this website</p>
+</div>
+
